Foto's updated for merchandise.

--- a/merchandise.html
+++ b/merchandise.html
@@ -49,20 +49,53 @@
     </div>
   <div class="main" id="main">
     <h1>Merchandise</h1>
-    <p> coming soon. </p>
-    <h1>Sponsoring</h1>
-    <a href="https://usc.uva.nl/" target="_blank">
-    <div style="padding: 30px; float: left;">
-      <img src="/imgs/logo-usc.png">
+    <h2>Magic Mug with ETDS Amsterdam logo</h2>
+    <p>
+      The logo becomes visible when a hot beverage is poured into the mug (see video).
+    </p>
+    <p>
+      Price for the mug: 10 euro
+    </p>
+  </br>
+    <div width=480vh height=320vh style="padding: 30px; float: left;">
+      <iframe src="https://drive.google.com/file/d/1IqWSWEX3_BXVfzTF2V5X7CZ4qoEa9JD8/preview"></iframe>
     </div>
-    <a href="https://www.rentabike.nl/" target="_blank">
-    <div style="padding: 30px; float: left;">
-      <img src="/imgs/Rentabike-logo.png">
+    <div width=480vh height=320vh style="padding: 30px; float: left;">
+      <iframe src="https://drive.google.com/file/d/1Ipl6f5gRze7yOTidE9JOV_NwxPXlmO1e/preview"></iframe>
     </div>
+    <div width=32vh height=auto style="padding: 30px; float: left;">
+        <img width=360vh height=152vh src="/imgs/mogelijke_website_foto.png">
+    </div>
+    <div style="display: inline-block">
+    <h2>Black T-shirt with ETDS Amsterdam logo</h2>
+    <p>
+      This T-shirt already radiates awesomeness in daylight, but when using a blacklight the effect will become much stronger.</br>
+      <i>*The color of the ink is to be announced.</i>
+    </p>
+    <p>
+      Price for the t-shirt: 12 euro. Available in sizes: S,M,L,XL,XXL
+    </p>
 
-
-  </a>
   </div>
+    <div style="padding: 30px;">
+      <img src="/imgs/shirt_website.png" width=auto height=480vh>
+    </div>
+    <h1>Sponsoring</h1>
+    <div style="padding: 30px; float: left;">
+      <a href="https://usc.uva.nl/" target="_blank">
+          <img src="/imgs/logo-usc.png" style="height:16vh; width:auto;">
+      </a>
+    </div>
+    <div style="padding: 30px; float: left;">
+      <a href="https://www.rentabike.nl/" target="_blank">
+          <img src="/imgs/Rentabike-logo.png" style="height:8vh; width:auto;">
+      </a>
+    </div>
+    <div style="display: inline-flex">
+    </br></br></br></br></br></br></br></br></br></br></br></br>
+  </div>
+  </div>
+
   <div class="footer" id="footer">
     <div class="footer-elmnts">
       <?xml version="1.0" encoding="iso-8859-1"?>
