ADDED update merchandise with logo from Accuraat. UPDATED regulations page.

--- a/merchandise.html
+++ b/merchandise.html
@@ -91,6 +91,11 @@
           <img src="/imgs/Rentabike-logo.png" style="height:8vh; width:auto;">
       </a>
     </div>
+    <div style="padding: 30px; float: left;">
+      <a href="https://www.accuraatverhuur.nl/" target="_blank">
+          <img src="/imgs/AccuraatLogo.svg" style="height:8vh; width:auto;">
+      </a>
+    </div>
     <div style="display: inline-flex">
     </br></br></br></br></br></br></br></br></br></br></br></br>
   </div>
