--- a/regulations.html
+++ b/regulations.html
@@ -63,7 +63,7 @@
       <h3>REGISTRATION PROCEDURE:</h3>
       <ol start="4" id="regsListUL">
         <li id="regsList">Divided over the months March and April there will be 3 regular lottery rounds. Meaning there are 3 registration deadlines and 3 payment deadlines. After the third regular lottery round lotteries will take place if a participant drops out.</li>
-        <li id="regsList">During a period of two weeks before the next lottery round team captains will have time to register new team members in the ETDS registration system. These time periods will be announced to the team captains by the organisations.</li>
+        <li id="regsList">During a period of ten days before the next lottery round team captains will have time to register new team members in the ETDS registration system. These time periods will be announced to the team captains by the organisations.</li>
         <li id="regsList">Registration does not guarantee participation to the tournament, due to the lottery system.</li>
         <li id="regsList">The team captain is responsible for the registration of his/her team members via the by the ETDS organisation administered registration system.</li>
         <li id="regsList">Team captains register themselves as team captain in the registration system and will not have to take part in the lottery, nor do their dancing partners, with a maximum of 1 team captain with teams up to 20 participants and a maximum of 2 team captains with teams with 21 or more participants.</li>
@@ -84,7 +84,7 @@
       <h3>FINANCIAL:</h3>
       <ol start="13" id="regsListUL">
         <li id="regsList">Within 10 days after the results of the lottery, each association has to pay the participation fees to the ETDS committee. If these are not paid within these 10 days the registered spots will be opened for the next lottery round.</li>
-        <li id="regsList">If a registered member is moved from the waiting list to the participants list, their fee needs to be paid to the ETDS committee within 2 weeks, or else their registration will be cancelled.</li>
+        <li id="regsList">If a registered member is moved from the waiting list to the participants list, their fee needs to be paid to the ETDS committee within 10 days, or else their registration will be cancelled.</li>
         <li id="regsList">If the ETDS takes place before the payment deadline is met, the participation fee needs to be paid before the start of the ETDS.</li>
         <li id="regsList">Restitution of participation fee:</li>
           <ol type="a" id="regsListUL">
