UPDATED waiting list to reserve list.

--- a/regulations.html
+++ b/regulations.html
@@ -71,20 +71,20 @@
     </br>
       <h3>CANCELLATIONS:</h3>
       <ol start="9" id="regsListUL">
-        <li id="regsList">One week after the registration closes, the team captain will receive a final list of participants with a waiting list.</li>
-        <li id="regsList">Whenever a participant cancels, his/her place will be taken by someone from the waiting list. The system will maintain the following priorities:</li>
+        <li id="regsList">One week after the registration closes, the team captain will receive a final list of participants with a reserve list.</li>
+        <li id="regsList">Whenever a participant cancels, his/her place will be taken by someone from the reserve list. The system will maintain the following priorities:</li>
         <ol type="a" id="regsListUL">
-          <li id="regsList">The spot will be filled by a participant from the waiting list from any team, by random lottery done by the ETDS organisation. Preference will go to a participant that will stabilise the balance between lead/follow in the blind date groups of Breitensport, CloseD and Open Class.</li>
+          <li id="regsList">The spot will be filled by a participant from the reserve list from any team, by random lottery done by the ETDS organisation. Preference will go to a participant that will stabilise the balance between lead/follow in the blind date groups of Breitensport, CloseD and Open Class.</li>
           <li id="regsList">It is not allowed to participate under someone else’s name. If done so, the participant will be disqualified and their team captain could also been disqualified if he/she allowed it.</li>
         </ol>
-        <li id="regsList">The procedure mentioned in 9 will be followed on set lottery moments and, if there are cancellations, will be repeated every week in order to fill free spots. Final spots (due to cancellations) will be filled on May twenty fifth. The team captain will receive an update if a team member that was still on the waiting list got through the lottery. The final update will be on May twenty six.</li>
-        <li id="regsList">If a participant on the waiting list isn’t available for the ETDS anymore they are required to let the ETDS organisation know via their team captain. The participant can be taken out of the lottery system then.</li>
+        <li id="regsList">The procedure mentioned in 9 will be followed on set lottery moments and, if there are cancellations, will be repeated every week in order to fill free spots. Final spots (due to cancellations) will be filled on May twenty fifth. The team captain will receive an update if a team member that was still on the reserve list got through the lottery. The final update will be on May twenty six.</li>
+        <li id="regsList">If a participant on the reserve list isn’t available for the ETDS anymore they are required to let the ETDS organisation know via their team captain. The participant can be taken out of the lottery system then.</li>
       </ol>
     </br>
       <h3>FINANCIAL:</h3>
       <ol start="13" id="regsListUL">
         <li id="regsList">Within 10 days after the results of the lottery, each association has to pay the participation fees to the ETDS committee. If these are not paid within these 10 days the registered spots will be opened for the next lottery round.</li>
-        <li id="regsList">If a registered member is moved from the waiting list to the participants list, their fee needs to be paid to the ETDS committee within 10 days, or else their registration will be cancelled.</li>
+        <li id="regsList">If a registered member is moved from the reserve list to the participants list, their fee needs to be paid to the ETDS committee within 10 days, or else their registration will be cancelled.</li>
         <li id="regsList">If the ETDS takes place before the payment deadline is met, the participation fee needs to be paid before the start of the ETDS.</li>
         <li id="regsList">Restitution of participation fee:</li>
           <ol type="a" id="regsListUL">
@@ -131,7 +131,7 @@
       <h2>2: SELECTION PROCEDURE</h2>
       <p>The general selection procedure for the tournament by lottery system can be found in the image below. From all participants first the team captains and their (virtual) partners will be selected. After that the rest of the participants will be randomly selected until 90% of the maximum of participants has been reached.</p>
       <p>The remaining 10% will be selected as described in the paragraph Essential Tournament Support.</p>
-      <p>The remaining registrations that have not been selected will be placed on the waiting list. Below you will find how the lottery procedure will continue, as described above, with the help of an example. The first step of the lottery system, the selecting and matching of the team captains will not be explicitly explained. The ‘matching procedure’ is the same as every other sign up without a partner.</p>
+      <p>The remaining registrations that have not been selected will be placed on the reserve list. Below you will find how the lottery procedure will continue, as described above, with the help of an example. The first step of the lottery system, the selecting and matching of the team captains will not be explicitly explained. The ‘matching procedure’ is the same as every other sign up without a partner.</p>
     </br>
       <h3>REMAINING PARTICIPANTS</h3>
       <p>All other registrations (Breitensport and Open/CloseD) will be placed on a list in a random order. The person on top of the list will be selected and ‘matched’.</p>
@@ -217,14 +217,14 @@
     </br>
       <h3>Cancellation policy</h3>
         <ol id="regsListUL">
-          <li id="regsList">One week after the registration closes, the team captain will receive a final list of participants with a waiting list.</li>
-          <li id="regsList">Whenever a participant cancels, his/her place will be taken by someone from the waiting list. The system will maintain the following priorities:</li>
+          <li id="regsList">One week after the registration closes, the team captain will receive a final list of participants with a reserve list.</li>
+          <li id="regsList">Whenever a participant cancels, his/her place will be taken by someone from the reserve list. The system will maintain the following priorities:</li>
           <ol id="regsListUL" type="a">
-          <li id="regsList">The spot will be filled by a participant from the waiting list from any team, by random lottery done by the ETDS organisation. Preference will go to a participant that will stabilise the balance between lead/follow in the blind date groups of Breitensport, CloseD and Open Class.</li>
+          <li id="regsList">The spot will be filled by a participant from the reserve list from any team, by random lottery done by the ETDS organisation. Preference will go to a participant that will stabilise the balance between lead/follow in the blind date groups of Breitensport, CloseD and Open Class.</li>
           <li id="regsList">It is not allowed to participate under someone else’s name. If done so, the participant will be disqualified and their team captain could also been disqualified if he/she allowed it.</li>
           </ol>
-          <li id="regsList">The procedure mentioned in 1 will be followed on set lottery moments and, if there are cancellations, will be repeated every week in order to fill free spots. Final spots (due to cancellations) will be filled on May twenty fifth. The team captain will receive an update if a team member that was still on the waiting list got through the lottery. The final update will be on May twenty sixth.</li>
-          <li id="regsList">If a participant on the waiting list isn’t available for the ETDS anymore they are required to let the ETDS organisation know via their team captain. The participant can be taken out of the lottery system then.</li>
+          <li id="regsList">The procedure mentioned in 1 will be followed on set lottery moments and, if there are cancellations, will be repeated every week in order to fill free spots. Final spots (due to cancellations) will be filled on May twenty fifth. The team captain will receive an update if a team member that was still on the reserve list got through the lottery. The final update will be on May twenty sixth.</li>
+          <li id="regsList">If a participant on the reserve list isn’t available for the ETDS anymore they are required to let the ETDS organisation know via their team captain. The participant can be taken out of the lottery system then.</li>
           <li id="regsList">Restitution of participation fee:</li>
           <ol id="regsListUL" type="a">
           <li id="regsList">A participant will get full restitution if they cancel before April 10th 2020 and  the empty spot can be filled. Full restitution will be given to the participant’s association on July 1st latest.
