--- a/merchandise.html
+++ b/merchandise.html
@@ -69,17 +69,23 @@
     <div style="display: inline-block">
     <h2>Black T-shirt with ETDS Amsterdam logo</h2>
     <p>
-      This T-shirt already radiates awesomeness in daylight, but when using a blacklight the effect will become much stronger.</br>
-      <i>*The color of the ink is to be announced.</i>
+      This T-shirt already radiates awesomeness in daylight, but when using a blacklight the effect will become much stronger. When you turn off the light you'll even glow!</br>
     </p>
     <p>
       Price for the t-shirt: 12 euro. Available in sizes: S,M,L,XL,XXL
     </p>
 
   </div>
-    <div style="padding: 30px;">
-      <img src="/imgs/shirt_website.png" width=auto height=480vh>
+    <div style="padding: 30px; float: left;">
+      <img src="/imgs/Male_shirt.jpg" width=200vh height=280vh>
     </div>
+    <div width=440vh height=280vh style="padding: 30px; float: left;">
+      <iframe width=440vh height=280vh src="https://drive.google.com/file/d/1petEZV5UMdnwU56yQlDwyBW-fdjQsEb-/preview"></iframe>
+    </div>
+    <div  style="padding: 30px;">
+      <img src="/imgs/female_shirt.jpg" width=200vh height=280vh>
+    </div>
+
     <h1>Sponsoring</h1>
     <div style="padding: 30px; float: left;">
       <a href="https://usc.uva.nl/" target="_blank">
