Added in corona FAQ

--- a/faq.html
+++ b/faq.html
@@ -67,31 +67,31 @@
       <div class="main" id="main">
         <h1>FAQ</h1>
         <p>
-          <b> How do I sign up for the ETDS? </b> <\ br> You can register with
+          <b> How do I sign up for the ETDS? </b> </br> You can register with
           your team captains, they will sign you up for the lottery. You will
-          hear from your team captain if you got in or not. <\ br><\ br>
-          <b> How do I pay for the ETDS? </b> <\ br> We get our payments from
+          hear from your team captain if you got in or not. </br></br>
+          <b> How do I pay for the ETDS? </b> </br> We get our payments from
           your team captains. So, you will transfer the money to your team
           captains (they will provide you with their bank account for such
-          affairs).<\ br><\ br>
-          <b> I don’t have a partner, can I still participate? </b> <\ br> Yes,
+          affairs).</br></br>
+          <b> I don’t have a partner, can I still participate? </b> </br> Yes,
           you sign up without a partner. You will have to find a partner at the
           blind date rounds. See the tournament section about blind date rounds.
-          <\ br><\ br>
-          <b> Can I have different partners for Ballroom and Latin. </b> <\ br>
-          Yes you can. <\ br><\ br>
+          </br></br>
+          <b> Can I have different partners for Ballroom and Latin. </b> </br>
+          Yes you can. </br></br>
           <b>Can I go through the lottery system without my dancing partner? </b
-          ><\ br> No, if you sign up together, you are either both in, or both
-          out.<\ br><\ br>
+          ></br> No, if you sign up together, you are either both in, or both
+          out.</br></br>
           <b
             >Can I get a discount if I only participate one day or don’t spend
             the night? </b
-          ><\ br> No. <\ br><\ br>
-          <b>How can I experience the ETDS if I’m short on cash?</b><\ br> If
+          ></br> No. </br></br>
+          <b>How can I experience the ETDS if I’m short on cash?</b></br> If
           you become a super volunteer, you can attend the ETDS for free. We
           will arrange your food, drinks and a place to sleep. However, you can
-          not join any of the competitions. <\ br>
-          <b>How will the coronavirus (COVID-19) affect the ETDS?</b><\ br> The
+          not join any of the competitions. </br>
+          <b>How will the coronavirus (COVID-19) affect the ETDS?</b></br> The
           ETDS commitee is closely monitoring the developments regarding the
           novel coronavirus (COVID-19) and is following the advice given by the
           <a
@@ -103,7 +103,7 @@
           Protection) as to what measures should be taken to safeguard the
           health of visitors. At this time we fully expect that the coronavirus
           will not hinder the tournament. If necessary, we will inform our
-          participants via the means of communication available to us. <\ br>
+          participants via the means of communication available to us. </br>
         </p>
       </div>
       <div class="footer" id="footer">
