Added in supervolunteer links

--- a/faq.html
+++ b/faq.html
@@ -90,7 +90,7 @@
           <b>How can I experience the ETDS if I’m short on cash?</b></br> If
           you become a super volunteer, you can attend the ETDS for free. We
           will arrange your food, drinks and a place to sleep. However, you can
-          not join any of the competitions. </br>
+          not join any of the competitions. Register here to become a <a href="https://xtds.nl/volunteering/register" target="_blank">supervolunteer</a></br>
           <b>How will the coronavirus (COVID-19) affect the ETDS?</b></br> The
           ETDS commitee is closely monitoring the developments regarding the
           novel coronavirus (COVID-19) and is following the advice given by the
