--- a/registration.html
+++ b/registration.html
@@ -59,11 +59,11 @@
       you are out together. <br/>
     </p>
     <h1> ETDS dashboard </h1>
-    <!-- <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div> -->
-    <div class = "dashboard-btn"> <a href="registration.html"> XTDS DASHBOARD </a> </div>
+    <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div>
+    <div class = "dashboard-btn"> <a href="https://xtds.nl/volunteering/register" target="_blank"> XTDS SUPERVOLUNTEER </a> </div>
     <p></br>
     This is where you can log on as team captain to register participants, update
-    information and check your registrations. </p>
+    information and check your registrations, or register as supervolunteer. </p>
 
   </div>
   <div class="footer" id="footer">
