Added experience package and rivm link

--- a/costs.html
+++ b/costs.html
@@ -76,6 +76,14 @@
           <td>10 euro</td>
         </tr>
         <tr>
+          <td>ETDS experience package (2 days 9-19h, 2 nights 20h-2h)</td>
+          <td>25 euro</td>
+        </tr>
+        <tr>
+          <td>ETDS extreme experience package (2 days 9-19h, 3 nights 20h-2h)</td>
+          <td>35 euro</td>
+        </tr>
+        <tr>
           <td>Super-Volunteer</td>
           <td>Free</td>
         </tr>
