--- a/registration.html
+++ b/registration.html
@@ -60,6 +60,7 @@
     </p>
     <h1> ETDS dashboard </h1>
     <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div>
+    <h1> XTDS supervolunteer </h1>
     <div class = "dashboard-btn"> <a href="https://xtds.nl/volunteering/register" target="_blank"> XTDS SUPERVOLUNTEER </a> </div>
     <p></br>
     This is where you can log on as team captain to register participants, update
